修改目录结构，提交说明文档